# opcxx

./: .gitignore  .ycm_extra_conf.py  Makefile.am  configure.ac  stest.cxx  test.cxx
src/cli/: client.cxx  mt101-server.cxx  virtual-server.cxx
src/mt101/: mt101.cxx  mt101.hxx
src/opcua/: ids.hxx  struct.cxx  struct.hxx  tcp.cxx  tcp.hxx  types.hxx  util.cxx  util.hxx
src/opcua/common/: ids.hxx  object.cxx  object.hxx  struct.cxx  struct.hxx  types.cxx  types.hxx  util.cxx  util.hxx
src/opcua/tcp/: idmapping.cxx  idmapping.hxx  ids.hxx  server.cxx  server.hxx  streams.cxx  streams.hxx  types.cxx  types.hxx
tests/: serializer.cxx
